--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -26,6 +26,7 @@ $path: "/public/images/";
 
 .js-enabled {
     .front-end-control {
+        display: inline;
         display: initial;
         visibility: visible;
     }
