LIC-878: Call new auth endpoints for user details

--- a/server/views/admin/users/verifyNomis.pug
+++ b/server/views/admin/users/verifyNomis.pug
@@ -6,10 +6,8 @@ div.pure-g.largeMarginBottom.midPaddingBottom.paddingTop
             thead
                 tr
                     th Nomis Username
-                    th First name
-                    th Last name
+                    th Name
             tbody
                 tr.user
                     td#nomisUserName &nbsp
-                    td#nomisFirstName
-                    td#nomisLastName
+                    td#nomisName
