--- a/server/views/global-header.pug
+++ b/server/views/global-header.pug
@@ -13,7 +13,7 @@ header(role="banner", id="global-header", class="with-proposition")
                 div.pure-u-1.pure-u-md-1-2
                     div#header-user.u-pad10.sm-pad15
                         div.u-padRight10.sm-padRight30.padLeft15.bold.borderRight
-                            a(href="/user" title="User page" aria-label="Visit user admin page") #{user.firstName} #{user.lastName}
+                            a(href="/user" title="User page" aria-label="Visit user admin page") #{user.name}
                         if user.activeCaseLoad && !user.activeCaseLoad.description.includes('---')
                             div.u-padRightLeft10.sm-padLeftRight30.bold.borderRight
                                 a(href="/user" title="User page" aria-label="Visit user admin page") #{user.activeCaseLoad.description}
