--- a/server/views/taskList/vary/standardTask.pug
+++ b/server/views/taskList/vary/standardTask.pug
@@ -14,15 +14,16 @@ mixin action(actionConfig)
     - var isButton = actionConfig.type === 'btn'
     - var isSecondaryButton = actionConfig.type === 'btn-secondary'
     - var target = actionConfig.newTab ? '_blank' : null
+    - var link = actionConfig.href.charAt(actionConfig.href.length - 1) === '/' ? actionConfig.href + prisonerInfo.bookingId : actionConfig.href
 
     if isLink
-        a.taskListAction(href=actionConfig.href + prisonerInfo.bookingId, target=target) #{actionConfig.text}
+        a.taskListAction(href=link, target=target) #{actionConfig.text}
 
     else if isButton
-        a.taskListAction.center.button(href=actionConfig.href + prisonerInfo.bookingId, target=target) #{actionConfig.text}
+        a.taskListAction.center.button(href=link, target=target) #{actionConfig.text}
 
     else if isSecondaryButton
-        a.taskListAction.center.button.button-secondary(href=actionConfig.href + prisonerInfo.bookingId, target=target) #{actionConfig.text}
+        a.taskListAction.center.button.button-secondary(href=link, target=target) #{actionConfig.text}
 
 mixin label(text)
     - var sections = text.split('||')
