LIC-878: Fix name not appearing due to new auth endpoint

--- a/server/views/user/admin.pug
+++ b/server/views/user/admin.pug
@@ -15,7 +15,7 @@ block content
                 tbody
                     tr
                         td Name
-                        td #{user.firstName} #{user.lastName}
+                        td #{user.name}
                     tr
                         td Role
                         td #{user.role}
