--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -65,3 +65,9 @@ div.form-group
 
   if formItem === 'notToReside'
     include notToReside
+
+  if formItem === 'do_not_meet'
+    include do_not_meet
+
+  if formItem === 'tell_probation_about_relationship'
+    include tell_probation_about_relationship
