--- a/server/views/taskList/tasks/finalChecksTask.pug
+++ b/server/views/taskList/tasks/finalChecksTask.pug
@@ -1,30 +1,28 @@
-div.paddingBottom
-  div
+div.taskListSingleLineItem.midPaddingBottom
+  div.pure-u-1.pure-u-md-3-4
     h2.heading-medium Review case
 
-  div.pure-g
-    div.pure-u-1.pure-u-md-3-4
-      if licenceStatus.tasks.finalChecks === 'DONE'
-        div.padLeftRight15
-          ul
-            if licenceStatus.decisions.seriousOffence
-              li.list-bullet.alert#seriousOffenceAnswer The offender is under investigation or been charged for a serious offence in custody
-            else
-              li.list-bullet#seriousOffenceAnswer The offender is not under investigation or been charged for a serious offence in custody
+    if licenceStatus.tasks.finalChecks === 'DONE'
+      div.padLeftRight15
+        ul
+          if licenceStatus.decisions.seriousOffence
+            li.list-bullet.alert#seriousOffenceAnswer The offender is under investigation or been charged for a serious offence in custody
+          else
+            li.list-bullet#seriousOffenceAnswer The offender is not under investigation or been charged for a serious offence in custody
 
-            if licenceStatus.decisions.onRemand
-              li.list-bullet.alert#onRemandAnswer The offender is on remand
-            else
-              li.list-bullet#onRemandAnswer The offender is not on remand
+          if licenceStatus.decisions.onRemand
+            li.list-bullet.alert#onRemandAnswer The offender is on remand
+          else
+            li.list-bullet#onRemandAnswer The offender is not on remand
 
-            if licenceStatus.decisions.confiscationOrder
-              li.list-bullet.alert#confiscationOrderAnswer The offender is subject to a confiscation order
-            else
-              li.list-bullet#confiscationOrderAnswer The offender is not subject to a confiscation order
-      else
-        | Not completed
-    div.pure-u-1.pure-u-md-1-4.center
-      if user.role === 'CA'
-        -var path = "/hdc/finalChecks/seriousOffence/" + prisonerInfo.bookingId
-        +startContinueChange(licenceStatus.tasks.finalChecks, path)
+          if licenceStatus.decisions.confiscationOrder
+            li.list-bullet.alert#confiscationOrderAnswer The offender is subject to a confiscation order
+          else
+            li.list-bullet#confiscationOrderAnswer The offender is not subject to a confiscation order
+    else
+      | Not completed
+  div.pure-u-1.pure-u-md-1-4.center.buttonContainer
+    if user.role === 'CA'
+      -var path = "/hdc/finalChecks/seriousOffence/" + prisonerInfo.bookingId
+      +startContinueChange(licenceStatus.tasks.finalChecks, path)
 
