added do not contact victim condition form

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -66,6 +66,7 @@ div.form-group
   if formItem === 'notToReside'
     include notToReside
 
+  // 2019 conditions
   if formItem === 'do_not_meet'
     include do_not_meet
 
@@ -83,3 +84,6 @@ div.form-group
 
   if formItem === 'do_not_work_or_activity'
     include do_not_work_or_activity
+
+  if formItem === 'do_not_contact_victim'
+    include do_not_contact_victim
