added follow rehabilitation instructions condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -87,3 +87,6 @@ div.form-group
 
   if formItem === 'do_not_contact_victim'
     include do_not_contact_victim
+
+  if formItem === 'follow_rehabilitation_instructions'
+    include follow_rehabilitation_instructions
