added give sample condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -90,3 +90,6 @@ div.form-group
 
   if formItem === 'follow_rehabilitation_instructions'
     include follow_rehabilitation_instructions
+
+  if formItem === 'give_sample'
+    include give_sample
