added go to appointments condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -93,3 +93,6 @@ div.form-group
 
   if formItem === 'give_sample'
     include give_sample
+
+  if formItem === 'go_to_appointments'
+    include go_to_appointments
