added allow visit condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -96,3 +96,6 @@ div.form-group
 
   if formItem === 'go_to_appointments'
     include go_to_appointments
+
+  if formItem === 'allow_visit'
+    include allow_visit
