added stay at address condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -99,3 +99,6 @@ div.form-group
 
   if formItem === 'allow_visit'
     include allow_visit
+
+  if formItem === 'stay_at_address'
+    include stay_at_address
