added police to take condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -102,3 +102,6 @@ div.form-group
 
   if formItem === 'stay_at_address'
     include stay_at_address
+
+  if formItem === 'police_take_to'
+    include police_take_to
