added vehicle and documentation conditions

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -105,3 +105,6 @@ div.form-group
 
   if formItem === 'police_take_to'
     include police_take_to
+
+  if formItem === 'tell_probation_document'
+    include tell_probation_document
