added possession conditions

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -120,3 +120,9 @@ div.form-group
 
   if formItem === 'do_not_access_download'
     include do_not_access_download
+
+  if formItem === 'do_not_own_item'
+    include do_not_own_item
+
+  if formItem === 'tell_about_animal'
+    include tell_about_animal
