added finances condition

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -126,3 +126,7 @@ div.form-group
 
   if formItem === 'tell_about_animal'
     include tell_about_animal
+
+  if formItem === 'do_not_have_more_money'
+    include do_not_have_more_money
+
