add default text on caselist when no cases

--- a/server/views/caseList/DMTable.pug
+++ b/server/views/caseList/DMTable.pug
@@ -43,3 +43,6 @@ table#hdcEligiblePrisoners.largeMarginBottom
               else
                 a.button.button-secondary.fullWidth.center(href=path role="button") #{label}
 
+    else
+      tr
+        td No HDC cases
