added report to staff at condition ui

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -130,3 +130,6 @@ div.form-group
   if formItem === 'do_not_have_more_money'
     include do_not_have_more_money
 
+  if formItem === 'report_to_staff_at'
+    include report_to_staff_at
+
