--- a/server/views/reporting/reportingDate.pug
+++ b/server/views/reporting/reportingDate.pug
@@ -1,43 +1,35 @@
-extends ../layout
-include ../includes/errorBannerWithDetail
+extends ../formTemplates/formTemplate
 
-block content
+block question
+  | Enter reporting date and time
 
-  div.pure-g
-    div.pure-u-1
-      include ../includes/back
-      include ../includes/personalDetailsSummary
-      +errorBannerWithDetail(errorObject, [{ field: 'reportingDate' }, { field: 'reportingTime' }])
+block formItems
+  input(type="hidden" name="path" value=action)
 
-  div.pure-g.largePaddingBottom
-    div.pure-u-2-3
-      h2.heading-large Enter reporting date and time
+  div#address.pure-g
+    div.pure-u-3-5
+      div(class=errorObject.reportingDate ? "form-group form-group-error" : "form-group")
+        fieldset
+          if errorObject.reportingDate
+            legend
+              span.error-message #{errorObject.reportingDate}
+          div.form-date
+            div.form-group.form-group-day
+              label.form-label(for="reportingDate") Day
+              input#reportingDate(class=errorObject.reportingDate ? "form-control-error form-control" : "form-control" name="reportingDay" type="number" pattern="[0-9]*" value=data.reportingDay)
 
-  form#reportingForm(method='POST')
-    input(type="hidden" name="_csrf" value=csrfToken)
-    input(type="hidden" name="bookingId" value=bookingId)
-    input(type="hidden" name="path" value=action)
+            div.form-group.form-group-month
+              label.form-label(for="reportingMonth") Month
+              input#reportingMonth(class=errorObject.reportingDate ? "form-control-error form-control" : "form-control" name="reportingMonth" type="number" pattern="[0-9]*" value=data.reportingMonth)
 
-    div#address.pure-g
-      div#error-anchor.pure-u-3-5
-        div.form-group
-          fieldset
-            div.form-date
-              div.form-group.form-group-day
-                label.form-label(for="reportingDay") Day
-                input.form-control#reportingDay(name="reportingDay" type="number" pattern="[0-9]*" value=data.reportingDay)
+            div.form-group.form-group-year
+              label.form-label(for="reportingYear") Year
+              input#reportingYear(class=errorObject.reportingDate ? "form-control-error form-control" : "form-control" name="reportingYear" type="number" pattern="[0-9]*" value=data.reportingYear)
 
-              div.form-group.form-group-month
-                label.form-label(for="reportingMonth") Month
-                input.form-control#reportingMonth(name="reportingMonth" type="number" pattern="[0-9]*" value=data.reportingMonth)
+      div(class=errorObject.reportingTime ? "form-group form-group-error" : "form-group")
+        label.form-label(for="reportingTime")
+          span Time
+          if errorObject.reportingTime
+            span.error-message #{errorObject.reportingTime}
+        input#reportingTime(class=errorObject.reportingTime ? "form-control-error form-control midMarginBottom" : "midMarginBottom form-control" name="reportingTime" type="time" value=data.reportingTime)
 
-              div.form-group.form-group-year
-                label.form-label(for="reportingYear") Year
-                input.form-control#reportingYear(name="reportingYear" type="number" pattern="[0-9]*" value=data.reportingYear)
-
-        div.form-group
-          label.form-label(for="reportingTime") Time
-          input#reportingTime.midMarginBottom.form-control(name="reportingTime" type="time" value=data.reportingTime)
-
-    div.paddingTop
-      include ../includes/saveAndReturn
