DB storage of notification mailboxes & admin UI to manage them

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -10,6 +10,7 @@ $path: "/public/images/";
 @import './caselist';
 @import './pagination';
 @import './additionalConditions';
+@import './tableSort';
 
 .pure-g {
     font-family: "nta",Arial,sans-serif;
