--- a/server/views/admin/users/list.pug
+++ b/server/views/admin/users/list.pug
@@ -1,6 +1,10 @@
 extends ../../layout
 
 block content
+
+  div.back-link-container.smallPaddingTop
+    a#back.link-back(href="/admin/") Back
+
   div.pure-g
     div.pure-u-1.searchLink.alignRight.sm-padTop55.u-paddingTop
       a#addUserLink(href='/admin/roUsers/add') Add user
