--- a/server/views/user/admin.pug
+++ b/server/views/user/admin.pug
@@ -4,7 +4,10 @@ block content
 
   div.pure-g
     div.pure-u-1
-      include ../includes/back
+      if isAdmin
+        include ../includes/backToHome
+      else
+        include ../includes/backToCaseList
 
     header.pure-u-1
       h1.heading-medium
@@ -25,7 +28,8 @@ block content
               td Active case load
               td #{user.activeCaseLoad.description}
 
-  if allRoles.length > 1 || allCaseLoads.length > 1
+  - var showCaseLoads = !isAdmin && allCaseLoads.length > 1
+  if allRoles.length > 1 || showCaseLoads
 
     form(method="post")
       input(type="hidden" name="_csrf" value=csrfToken)
@@ -48,16 +52,16 @@ block content
 
           div.pure-u-1.pure-u-sm-1-5
 
-        if allCaseLoads.length > 1
+        if showCaseLoads
 
           div.pure-u-1.pure-u-sm-2-5
             div.form-group
               label.form-label(for="selectCaseLoad") Select active case load
-              select.form-control#selectCaseLoad(name="caseLoad")
+              select.form-control#selectCaseLoad(name="caseLoadId")
                 option(value="" disabled selected) -- select --
                 for caseLoad in allCaseLoads
-                  option(value=caseLoad.caseLoadId, selected=caseLoad.caseLoadId === user.activeCaseLoad.caseLoadId) #{caseLoad.description}
+                  option(value=caseLoad.caseLoadId, selected=caseLoad.caseLoadId === user.activeCaseLoadId) #{caseLoad.description}
 
       div.pure-u-1.inlineButtons.paddingBottom.largeMarginTop
         input#continueBtn.requiredButton.button.midMarginBottom(type="submit" value="Submit")
-        a#backBtn.requiredButton.button.button-secondary(href="/caselist" role="button") Back to case list
+        a#backBtn.requiredButton.button.button-secondary(href="javascript: window.history.back();" role="button") Back
