--- a/server/views/admin/users/usersTable.pug
+++ b/server/views/admin/users/usersTable.pug
@@ -1,10 +1,10 @@
 table#hdcEligiblePrisoners.largeMarginBottom
   thead
     tr
-      th Nomis Username
-      th Delius Staff ID
-      th First Name
-      th Last Name
+      th Nomis user
+      th Delius staff code
+      th First name
+      th Last name
       th In SSO
       th
       th
