Store refusal reason on direct-to-refusal paths

--- a/server/views/approval/includes/release.pug
+++ b/server/views/approval/includes/release.pug
@@ -1,6 +1,8 @@
 block excludedForm
 
-  - var vals = data.reason || ''
+  - var noAddress = licenceStatus.decisions.curfewAddressRejected ? 'addressUnsuitable' : ''
+  - var noTime = licenceStatus.decisions.insufficientTimeStop ? 'insufficientTime' : ''
+  - var vals = data.reason || noAddress + noTime
 
   div
     if errorObject.reason
