Allow passing more meaningful error messages in caselist lookuo

--- a/server/views/caseList/ROTable.pug
+++ b/server/views/caseList/ROTable.pug
@@ -42,5 +42,8 @@ table#hdcEligiblePrisoners.sortcolumns.largeMarginBottom
               -var path = "/hdc/review/licence/" + prisoner.bookingId
               a.button.button-secondary.fullWidth.center(href=path role="button") #{label}
 
-if !hdcEligible || hdcEligible.length === 0
+if message
+  p #{message}
+
+else if !hdcEligible || hdcEligible.length === 0
   p No HDC cases
