--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -1,6 +1,6 @@
 include additionalConditions
 
--var validAddress = (!licenceStatus.decisions.curfewAddressRejected && !licenceStatus.decisions.bassAreaNotSuitable)
+-var validAddress = (!licenceStatus.decisions.curfewAddressRejected && !licenceStatus.decisions.bassAreaNotSuitable && !licenceStatus.decisions.approvedPremisesRequired)
 
 div.largeMarginBottom
 
@@ -20,6 +20,21 @@ div.largeMarginBottom
       else
         p.alert.bold(id='bass-address-error') Enter the BASS area details
 
+  else if (licenceStatus.decisions.approvedPremisesRequired)
+    // Approed premises address
+    div.borderBottom
+      div.pure-g
+        div.pure-u-1.pure-u-md-1-2
+          h2#approvedPremisesDetails.heading-medium Approved premises
+        div.pure-u-1.pure-u-md-1-2.alignRight
+          div.pure-u-md-1-2.change-details
+            if (stage === 'PROCESSING_RO' && user.role === 'RO')
+              a#addressEditLink(href="/hdc/curfew/approvedPremises/change/" + bookingId) Change
+
+      if errorObject.approvedPremisesAddress && (typeof errorObject.approvedPremisesAddress === 'string')
+        p.alert.bold(id='approvedPremisesAddress-error') #{errorObject.approvedPremisesAddress}
+      else
+        include approvedPremisesAddress
   else
     // Proposed address
     div.borderBottom
@@ -29,7 +44,7 @@ div.largeMarginBottom
         div.pure-u-1.pure-u-md-1-2.alignRight
           div.pure-u-md-1-2.change-details
             if (stage === 'PROCESSING_RO' && user.role === 'RO')
-              a#addressEditLink(href="/hdc/curfew/curfewAddressReview/change/" + bookingId) Change
+              a#addressEditLink(href="/hdc/curfew/approvedPremises/change/" + bookingId) Change
             if(stage === 'ELIGIBILITY' && user.role === 'CA')
               a#addressEditLink(href="/hdc/proposedAddress/curfewAddress/change/" + bookingId) Change
 
@@ -59,7 +74,7 @@ div.largeMarginBottom
     div.borderBottom
       div.pure-g
         div.pure-u-1.pure-u-md-1-2
-          h2#riskDetails.heading-medium Victim liaison
+          h2#victimDetails.heading-medium Victim liaison
         if (stage === 'PROCESSING_RO' && user.role === 'RO')
           div.pure-u-1.pure-u-md-1-2.alignRight
             div.pure-u-md-1-2.change-details
