--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -1,5 +1,7 @@
 include additionalConditions
 
+-var validAddress = (!licenceStatus.decisions.curfewAddressRejected && !licenceStatus.decisions.bassAreaNotSuitable)
+
 div.largeMarginBottom
 
   if (licenceStatus.decisions.bassReferralNeeded)
@@ -36,23 +38,23 @@ div.largeMarginBottom
       else
         include curfewAddress
 
-  // Risk
-  div.borderBottom
-    div.pure-g
-      div.pure-u-1.pure-u-md-1-2
-        h2#riskDetails.heading-medium Risk
-      if (stage === 'PROCESSING_RO' && user.role === 'RO')
-        div.pure-u-1.pure-u-md-1-2.alignRight
-          div.pure-u-md-1-2.change-details
-            a#riskEditLink(href="/hdc/risk/riskManagement/change/" + bookingId) Change
+  if licenceStatus.decisions.addressUnsuitable || validAddress
+    // Risk
+    div.borderBottom
+      div.pure-g
+        div.pure-u-1.pure-u-md-1-2
+          h2#riskDetails.heading-medium Risk
+        if (stage === 'PROCESSING_RO' && user.role === 'RO')
+          div.pure-u-1.pure-u-md-1-2.alignRight
+            div.pure-u-md-1-2.change-details
+              a#riskEditLink(href="/hdc/risk/riskManagement/change/" + bookingId) Change
 
-    if errorObject.risk && typeof errorObject.risk.riskManagement === 'string'
-      p.alert.bold(id='risk-error') #{errorObject.risk.riskManagement}
-    else
-      include riskManagement
+      if errorObject.risk && typeof errorObject.risk.riskManagement === 'string'
+        p.alert.bold(id='risk-error') #{errorObject.risk.riskManagement}
+      else
+        include riskManagement
 
-  if (!licenceStatus.decisions.curfewAddressRejected && !licenceStatus.decisions.bassAreaNotSuitable)
-
+  if validAddress
     // Victim liaison
     div.borderBottom
       div.pure-g
