Add the 'restricted additional' licence conditions

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -66,6 +66,9 @@ div.form-group
   if formItem === 'notToReside'
     include notToReside
 
+  if formItem === 'drug_testing'
+    include drug_testing
+
   // 2019 conditions
   if formItem === 'do_not_meet'
     include do_not_meet
