--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -12,7 +12,7 @@ include ./includes/utils
 
 block content
 
-  if user.role === 'CA'
+  if user.role === 'CA' && licenceVersion !== 0
     include ../includes/back-caselist-and-forms
   else
     include ../includes/backToCaseList
